[gd_scene load_steps=3 format=3 uid="uid://cf5tfglhhfxbh"]

[ext_resource type="Script" path="res://prefabs/victory_screen.gd" id="1_idjgm"]
[ext_resource type="PackedScene" uid="uid://dxkk2r3rnho6b" path="res://scenes/menu/menu.tscn" id="2_mgj2k"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_idjgm")
main_menu = ExtResource("2_mgj2k")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.788235)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VictoryLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Congrats you survived the dungeon!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KillCountLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "You killed %s enemies"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainButton" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[connection signal="pressed" from="ColorRect/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
